--- a/02-scripts.backup/MID_CMB_Rad_Kil_Iber_metadata_object.Rmd
+++ b/02-scripts.backup/MID_CMB_Rad_Kil_Iber_metadata_object.Rmd
@@ -20,17 +20,60 @@ library(tidyverse)
 knitr::opts_knit$set(root.dir = normalizePath(".."))
 ```
 
+Pull some information from Pandora
+```{r db_connection, eval = F}
+
+if(!require('remotes')) install.packages('remotes')
+remotes::install_github("sidora-tools/sidora.core")
+library(sidora.core)
+
+# establish database connection
+con <- get_pandora_connection(cred_file = "~/.credentials")
+
+```
+
+```{r get_data, eval = F}
+# use shorthand to get a list of data.frames
+df_list <- get_df_list(c(
+  make_complete_table_list(c("TAB_Site", "TAB_Library"))
+), con = con)
+
+jt <- join_pandora_tables(df_list)
+
+jt <- jt %>% convert_all_ids_to_values()
+
+
+library_info <- get_df("TAB_Library", con)
+library_info <- library_info %>% convert_all_ids_to_values()
+
+```
+
+```{r, eval = F}
+
+concentrations <- library_info %>%
+  select(library.Full_Library_Id, library.Batch, `library.Quantification_post-Indexing_total`) %>%
+  filter(str_detect(library.Batch, "MID")) %>%
+  bind_rows(., library_info %>%
+  select(library.Full_Library_Id, library.Batch, `library.Quantification_post-Indexing_total`) %>%
+  filter(str_detect(library.Batch, "CMB"))) %>%
+  bind_rows(., library_info %>%
+  select(library.Full_Library_Id, `library.Quantification_post-Indexing_total`) %>%
+  filter(str_detect(library.Full_Library_Id, "ELR|IVE")))
+
+
+```
+
+
 This creates an RData object that has the full metadata table, where the columns
 we use for plotting are set as factors, and lists the colors, shapes, and sizes of
 points for plotting PCAs and such for each of the metadata categories we're
 interested in.
 ```{r metadata}
 # load the metadata file
-full_metadata <- fread("./00-documentation.backup/radcliffe_pfuT_metadata.tsv") %>%
-  bind_rows(., fread("./00-documentation.backup/iberian_medieval_metadata.tsv")) %>%
-  bind_rows(., fread("./00-documentation.backup/kilteasheen_metadata.tsv")) %>%
+full_metadata <- fread("./00-documentation.backup/kilteasheen_metadata.tsv") %>%
+  full_join(., fread("./00-documentation.backup/radcliffe_pfuT_metadata.tsv")) %>%
+  full_join(., fread("./00-documentation.backup/iberian_medieval_metadata.tsv")) %>%
   full_join(., fread("./00-documentation.backup/MID_analysis_metadata.tsv"))
-
 
 full_metadata <- full_metadata %>%
   as_tibble() %>%
@@ -40,10 +83,10 @@ full_metadata <- full_metadata %>%
                                    "ELR", "IVE","Extraction_blank","Library_blank"),
          Time_period = fct_relevel(Time_period, "Industrial","Medieval","Extraction_blank","Library_blank"),
          Region = fct_relevel(Region, "Netherlands","Spain","England", "Ireland","Iberia"),
-         Periodontal_disease_present = fct_relevel(Periodontal_disease_present, "Yes","No","Unobservable"),
-         Caries_present = fct_relevel(Caries_present, "Yes","No","Unobservable"),
+         Periodontal_disease_present = fct_relevel(Periodontal_disease_present, "Yes","No","Unobservable","NR"),
+         Caries_present = fct_relevel(Caries_present, "Yes","No","Unobservable","NR"),
          Sample_or_Control = fct_relevel(Sample_or_Control, "Sample","Control"),
-         Sex = fct_relevel(Sex, "Female","Male","Indeterminate"),
+         Sex = fct_relevel(Sex, "Female","Male","Indeterminate","NR"),
          Tooth_location = fct_relevel(Tooth_location, "Anterior","Anterior/Posterior","Posterior","Unknown"),
          alt_tooth_location = fct_relevel(alt_tooth_location, "Anterior","Anterior/Posterior","Posterior","Unknown"))
 
@@ -67,21 +110,21 @@ Region_colors <- c(Netherlands = "#311068", Spain = "#5A167E", England = "#C83E7
 Region_shapes <- c(Netherlands = 9, Spain = 12, England = 10, Iberia = 7, Ireland = 13, Extraction_blank = 4, Library_blank = 3)
 Region_size <- c(Netherlands = 4, Spain = 4, England = 4, Iberia = 4, Ireland = 4, Extraction_blank = 4, Library_blank = 4)
 
-Periodontal_disease_present_colors <- c(Yes = "#311068", No = "#C83E73", Unobservable = "#737373")
-Periodontal_disease_present_shapes <- c(Yes = 19, No = 14, Unobservable = 10)
-Periodontal_disease_present_size <- c(Yes = 4, No = 4, Unobservable = 4)
+Periodontal_disease_present_colors <- c(Yes = "#311068", No = "#C83E73", Unobservable = "#737373", NR = "gray80")
+Periodontal_disease_present_shapes <- c(Yes = 19, No = 14, Unobservable = 10, NR = 2)
+Periodontal_disease_present_size <- c(Yes = 4, No = 4, Unobservable = 4, NR = 4)
 
 Sample_or_Control_colors <- c(Sample = "#311068", Control = "#737373")
 Sample_or_Control_shapes <- c(Sample = 19, Control = 8)
 Sample_or_Control_size <- c(Sample = 4, Control = 4)
 
-Caries_present_colors <- c(Yes = "#311068", No = "#C83E73", Unobservable = "#737373")
-Caries_present_shapes <- c(Yes = 19, No = 14, Unobservable = 10)
-Caries_present_size <- c(Yes = 4, No = 4, Unobservable = 4)
+Caries_present_colors <- c(Yes = "#311068", No = "#C83E73", Unobservable = "#737373", NR = "gray80")
+Caries_present_shapes <- c(Yes = 19, No = 14, Unobservable = 10, NR = 2)
+Caries_present_size <- c(Yes = 4, No = 4, Unobservable = 4, NR = 4)
 
-Sex_colors <- c(Female = "#311068", Male = "#C83E73", Indeterminate = "#737373")
-Sex_shapes <- c(Female = 19, Male = 17, Indeterminate = 8)
-Sex_size <- c(Female = 4, Male = 4, Indeterminate = 4)
+Sex_colors <- c(Female = "#311068", Male = "#C83E73", Indeterminate = "#737373", NR = "gray80")
+Sex_shapes <- c(Female = 19, Male = 17, Indeterminate = 8, NR = 2)
+Sex_size <- c(Female = 4, Male = 4, Indeterminate = 4, NR = 4)
 
 Tooth_location_colors <- c(Anterior = "#311068", `Anterior/Posterior` = "#C83E73", Posterior = "#FEA873", Unknown = "#737373")
 Tooth_location_shapes <- c(Anterior = 19, `Anterior/Posterior` = 18, Posterior = 17, Unknown = 8)
