--- a/02-scripts.backup/MID_CMB_Rad_Kil_Iber_taxonomy_betadiv.Rmd
+++ b/02-scripts.backup/MID_CMB_Rad_Kil_Iber_taxonomy_betadiv.Rmd
@@ -42,8 +42,18 @@ knitr::opts_knit$set(root.dir = normalizePath(".."))
 # load the taxonomy tables that have been decontaminated and the column headers are cleaned up
 load("./05-results.backup/Taxonomy_tables.RData")
 
+
 # load the metadata file
 load("./05-results.backup/Metadata_tables.RData")
+
+full_metadata <- full_metadata %>%
+  mutate(`DNA_molecules_per_library_x10^6_log` = log10(`DNA_molecules_per_library_x10^6`))
+
+# sourcetracker results for 5000 rarefaction
+full_source_results <- fread("./05-results.backup/sink_predictions_full_sources_5000.txt")
+
+reduced_source_results <- fread("./05-results.backup/sink_predictions_reduced_sources_5000.txt")
+
 
 ```
 
@@ -244,7 +254,9 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
     df_X <- pca.list$variates$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
-              inner_join(full_metadata, by = "Library_ID")
+              inner_join(full_metadata, by = "Library_ID") %>%
+              full_join(., full_source_results %>%
+                          rename(Library_ID = SampleID),  by = "Library_ID")
     
     color_group = df_X[[color_group]]
     shape_group = df_X[[shape_group]]
@@ -547,12 +559,18 @@ tune.pca(all_species_decontam_filtered_noblanks, logratio = 'CLR')
 # perform and plot a PCA to see how the data cluster
 # by Site
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Site", "Time_period", 3)
+plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC3", "Site", "Time_period", 3)
 plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Site", "Time_period", 3)
 plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC1", "Site", "Time_period", 3)
+
 
 # ggsave("05-results.backup/pca_village.pdf", plot = pca_village, device = "pdf",
 #        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
 
+```
+
+
+```{r}
 # by Region
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Region", "Time_period", 3)
 
@@ -610,6 +628,57 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "Log10\n(Seq. depth)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
+# by extract concentration (only available for CMB, MID, Radcliffe)
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC1, PC2, colour = `extract_conc_ng/uL`, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  mutate(`extract_conc_ng/uL_log` = log10(`extract_conc_ng/uL`)) %>%
+  ggplot(., aes(PC1, PC2, colour = `extract_conc_ng/uL_log`, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+# by sourceTracker results
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC1, PC2, colour = modernCalculus, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% modernCalculus", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+# by sourceTracker results
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC1, PC2, colour = Unknown, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% Unknown", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
 
 # ggsave("05-results.backup/librarybatch.pdf", plot = extractionbatch, device = "pdf",
 #        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
@@ -667,6 +736,55 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "Log10\n(Seq. depth)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
+# by extract concentration (only available for CMB, MID, Radcliffe)
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  ggplot(., aes(PC3, PC2, colour = `extract_conc_ng/uL`, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  mutate(`extract_conc_ng/uL_log` = log10(`extract_conc_ng/uL`)) %>%
+  ggplot(., aes(PC3, PC2, colour = `extract_conc_ng/uL_log`, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC3, PC2, colour = modernCalculus, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% modernCalculus", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC3, PC2, colour = Unknown, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% Unknown", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
 
 ```
 
@@ -1000,6 +1118,24 @@ plot_pca_mid(all_species_decontam_filtered_mid, "PC1", "PC2", "alt_tooth_locatio
 # by mg of extracted calculus
 plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
 
+# by [DNA] after extraction per mg of calculus extracted
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
+
+# by [DNA] after extraction per uL of eluate
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
+
+# by [DNA] after storage, before building libraries
+# plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_after_storage_ng/mg", "Pipenotch", 3, "DNA extract concentration after storage (ng/uL)")
+
+# by # of molecules in the library after indexing amplification
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "DNA_molecules_per_library_x10^6_log", "Pipenotch", 3, "log10(DNA_molecules_per_library_x10^6)")
+
+# by % attributed to modern calculus by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "modernCalculus", "Pipenotch", 3, "% modern calculus")
+
+# by % attributed to unknown source by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
+
 # with names
 # pca.list <- mixOmics::pca(all_species_decontam_filtered_mid, ncomp = 3, logratio = 'CLR')
 # plot_pca_names(pca.list, "PC1", "PC2", "Pipenotch")
@@ -1073,6 +1209,23 @@ plot_pca_mid(all_species_decontam_filtered_mid, "PC3", "PC2", "alt_tooth_locatio
 # by mg of extracted calculus
 plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
 
+# by [DNA] after extraction
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
+
+# by [DNA] after extraction per uL of eluate
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
+
+# by [DNA] after storage, before building libraries
+# plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "extract_conc_after_storage_ng/mg", "Pipenotch", 3, "DNA extract concentration after storage (ng/uL)")
+
+# by # of molecules in the library after indexing amplification
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "DNA_molecules_per_library_x10^6_log", "Pipenotch", 3, "log10(DNA_molecules_per_library_x10^6)")
+
+# by % attributed to modern calculus by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "modernCalculus", "Pipenotch", 3, "% modern calculus")
+
+# by % attributed to unknown source by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
 
 ```
 
@@ -1159,6 +1312,9 @@ pandoc.table(all_species_decontam_filtered_nocontrols_biplot_323$plot_env$neg_10
 ```
 
 
+```{r}
+
+```
 
 
 
