--- a/02-scripts.backup/MID_CMB_Rad_Kil_Iber_taxonomy_betadiv.Rmd
+++ b/02-scripts.backup/MID_CMB_Rad_Kil_Iber_taxonomy_betadiv.Rmd
@@ -560,8 +560,8 @@ tune.pca(all_species_decontam_filtered_noblanks, logratio = 'CLR')
 # by Site
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC2", "Site", "Time_period", 3)
 plot_pca(all_species_decontam_filtered_noblanks, "PC1", "PC3", "Site", "Time_period", 3)
+plot_pca(all_species_decontam_filtered_noblanks, "PC2", "PC3", "Site", "Time_period", 3)
 plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC2", "Site", "Time_period", 3)
-plot_pca(all_species_decontam_filtered_noblanks, "PC3", "PC1", "Site", "Time_period", 3)
 
 
 # ggsave("05-results.backup/pca_village.pdf", plot = pca_village, device = "pdf",
@@ -652,7 +652,7 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
-# by sourceTracker results
+# by sourceTracker results % modernCalculus
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
   full_join(., full_source_results %>%
               rename(Library_ID = SampleID)) %>%
@@ -666,7 +666,22 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "% modernCalculus", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
-# by sourceTracker results
+# by sourceTracker results % subgingival Plaque
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC1, PC2, colour = subPlaque, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC1 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[1], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% subgingival plaque", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+
+# by sourceTracker results % unknown
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
   full_join(., full_source_results %>%
               rename(Library_ID = SampleID)) %>%
@@ -748,6 +763,7 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "[DNA Extract]\n(ng/uL)", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
+# by by extract concentration log-transformed (only available for CMB, MID, Radcliffe)
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
   mutate(`extract_conc_ng/uL_log` = log10(`extract_conc_ng/uL`)) %>%
   ggplot(., aes(PC3, PC2, colour = `extract_conc_ng/uL_log`, shape = Time_period)) +
@@ -760,6 +776,7 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "[DNA Extract]\n(ng/uL) - log10", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
+# by sourceTracker results % modernCalculus
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
   full_join(., full_source_results %>%
               rename(Library_ID = SampleID)) %>%
@@ -773,6 +790,22 @@ malt_species_decontam_filtered_noblanks.pca.varmet %>%
     labs(colour = "% modernCalculus", shape = "Time period") +
     theme(legend.title = element_text(size = 10))
 
+# by sourceTracker results % subgingival plaque
+malt_species_decontam_filtered_noblanks.pca.varmet %>%
+  full_join(., full_source_results %>%
+              rename(Library_ID = SampleID)) %>%
+  ggplot(., aes(PC3, PC2, colour = subPlaque, shape = Time_period)) +
+    geom_point(size = 2) +
+    scale_shape_manual(values = Time_period_shapes) +
+    scale_color_viridis_c(option = "A") +
+    xlab(paste("PC3 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[3], 2)), "%", sep = "")) +
+    ylab(paste("PC2 - ", 100*(round(malt_species_decontam_filtered_noblanks.pca$explained_variance[2], 2)), "%", sep = "")) +
+    theme_minimal(base_size = 14) +
+    labs(colour = "% subgingival plaque", shape = "Time period") +
+    theme(legend.title = element_text(size = 10))
+
+
+# by sourceTracker results % unknown
 malt_species_decontam_filtered_noblanks.pca.varmet %>%
   full_join(., full_source_results %>%
               rename(Library_ID = SampleID)) %>%
@@ -1049,7 +1082,18 @@ all_species_decontam_filtered_mid <- all_species_decontam %>%
 
 # prepare to run a PCA
 # check the number of components to retain by tuning the PCA
-tune.pca(all_species_decontam_filtered_mid, logratio = 'CLR')
+mixOmics::tune.pca(all_species_decontam_filtered_mid, logratio = 'CLR')
+
+
+malt_otu.pca <- mixOmics::pca(all_species_decontam_filtered_mid, ncomp = 2, logratio = 'CLR')
+malt_pca_values <- malt_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID")
+
+ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
+  geom_text(aes(label = Library_ID), size = 3) +
+  theme_minimal()
 
 # perform and plot a PCA to see how the data cluster
 # by pipe notch presence
@@ -1133,6 +1177,9 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "DNA_molecules_pe
 # by % attributed to modern calculus by sourcetracker
 plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "modernCalculus", "Pipenotch", 3, "% modern calculus")
 
+# by % attributed to modern calculus by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "subPlaque", "Pipenotch", 3, "% subgingival plaque")
+
 # by % attributed to unknown source by sourcetracker
 plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
 
@@ -1213,7 +1260,7 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "Calculus_extract
 plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
 
 # by [DNA] after extraction per uL of eluate
-plot_pca_cont(all_species_decontam_filtered_mid, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
 
 # by [DNA] after storage, before building libraries
 # plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "extract_conc_after_storage_ng/mg", "Pipenotch", 3, "DNA extract concentration after storage (ng/uL)")
@@ -1223,6 +1270,9 @@ plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "DNA_molecules_pe
 
 # by % attributed to modern calculus by sourcetracker
 plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "modernCalculus", "Pipenotch", 3, "% modern calculus")
+
+# by % attributed to subgingival plaque by sourcetracker
+plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "subPlaque", "Pipenotch", 3, "% subgingival plaque")
 
 # by % attributed to unknown source by sourcetracker
 plot_pca_cont(all_species_decontam_filtered_mid, "PC3", "PC2", "Unknown", "Pipenotch", 3, "% Unknown source")
@@ -1312,9 +1362,6 @@ pandoc.table(all_species_decontam_filtered_nocontrols_biplot_323$plot_env$neg_10
 ```
 
 
-```{r}
-
-```
 
 
 
